--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 																									<!--| 
 Активация приложения с помощью нестандартного атрибута ngApp 											| 2
 																										|-->
-<html ng-app>
+<html ng-app="comeApp">
 
 <head>
     <meta charset="utf-8" />
@@ -47,6 +47,10 @@
     Подключение фреймворка AngularJS. *.js  															| 1
     																									|-->								
     <script src="bower_components/angular/angular.min.js"></script>
+
+    <script src="client/app.js"></script>
+    <script src="client/app/diet/diet.js"></script>
+    <script src="client/app/weighting/weighting.js"></script>
 </body>
 
 </html>
