--- a/client/app/diet/diet.html
+++ b/client/app/diet/diet.html
@@ -8,18 +8,18 @@
 	<table class="data-table">
 		<thead>
 			<tr>
-				<th>Дата и время</th>
-				<th>Наименование продукта</th>
-				<th>Вес, гр.</th>
-				<th ng-show="dc.showDetails">Белки</th>
-				<th ng-show="dc.showDetails">Жиры</th>
-				<th ng-show="dc.showDetails">Углеводы</th>
-				<th ng-show="dc.showDetails">ГИ</th>
-				<th>Калории</th>
+				<th ng-click=dc.sort('date')>Дата и время</th>
+				<th ng-click=dc.sort('name')>Наименование продукта</th>
+				<th ng-click=dc.sort('w')>Вес, гр.</th>
+				<th ng-click=dc.sort('proteins') ng-show="dc.showDetails">Белки</th>
+				<th ng-click=dc.sort('fats') ng-show="dc.showDetails">Жиры</th>
+				<th ng-click=dc.sort('carbohydrates') ng-show="dc.showDetails">Углеводы</th>
+				<th ng-click=dc.sort('gi') ng-show="dc.showDetails">ГИ</th>
+				<th ng-click=dc.sort('calories')>Калории</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="row in dc.meals" ng-class="dc.evaluateMeal(row)">
+			<tr ng-repeat="row in dc.meals | orderBy:dc.sortField:dc.reverse" ng-class="dc.evaluateMeal(row)">
 				<td><span ng-bind="row.date"></span><span ng-bind="row.time" ng-show="dc.showDetails"></span></td>
 				<td><span ng-bind="row.name"></span></td>
 				<td><span ng-bind="row.w"></span></td>
